# tlog

./: .gitignore  .packit.yml  .travis.yml  CONTRIBUTING.md  Common.am  Dockerfile.centos8  Dockerfile.fedora  Doxyfile  Makefile.am  README.md  configure.ac  index.html  notes.txt  params.json  rate_config.txt  tlog-tmpfiles.conf  tlog.c  tlog.spec  tlog_fd_writer.c  tlog_fd_writer.h  tlog_io.c  tlog_io.h  tlog_misc.c  tlog_misc.h  tlog_rc.h  tlog_sink.c  tlog_sink.h  tlog_sink_test.c  tlog_stream.c  tlog_stream.h  tlog_stream_btoa_test.c  tlog_stream_enc_bin_test.c  tlog_stream_enc_test.c  tlog_stream_enc_txt_test.c  tlog_stream_test.c  tlog_syslog_writer.c  tlog_syslog_writer.h  tlog_test.c  tlog_test.h  tlog_trx.h  (+6 more)
.github/workflows/: build.yml  coverity.yml  cppcheck.yml  intg.yml  podman-tests.yml  tlog-tests.yml
doc/: .gitignore  Makefile.am  log_format.md  mapping.json  schema.json
doc/profile.d/: tlog.csh  tlog.sh
include/: Makefile.am
include/tlog/: Makefile.am  chunk.h  conf.m4  conf_cmd.m4  conf_origin.h  delay.h  dispatcher.h  errs.h  es_json_reader.h  es_reader.h  fd_json_reader.h  fd_json_writer.h  fd_reader.h  fd_writer.h  grc.h  io.h  journal_json_reader.h  journal_json_writer.h  journal_misc.h  json_chunk.h  json_dispatcher.h  json_misc.h  json_msg.h  json_reader.h  json_reader_type.h  json_sink.h  json_source.h  json_stream.h  json_writer.h  json_writer_type.h  mem_json_reader.h  mem_json_writer.h  mem_reader.h  mem_writer.h  misc.h  misc.m4  msg.h  pkt.h  play.h  play_conf.h  (+50 more)
include/tltest/: Makefile.am  json_sink.h  json_source.h  json_stream_enc.h  misc.h
lib/: .gitignore  Makefile.am  chunk.c  conf_validate.c.m4  dispatcher.c  errs.c  es_json_reader.c  es_reader.c  fd_json_reader.c  fd_json_writer.c  fd_reader.c  fd_reader_test.c  fd_writer.c  grc.c  grc_test.c  io.c  journal_json_reader.c  journal_json_writer.c  journal_misc.c  json_chunk.c  json_dispatcher.c  json_misc.c  json_msg.c  json_reader.c  json_sink.c  json_source.c  json_stream.c  json_writer.c  mem_json_reader.c  mem_json_writer.c  mem_reader.c  mem_writer.c  misc.c  misc.m4  msg.c  pkt.c  play.c  play_conf.c  play_conf_cmd.c.m4  rate_limit_sink.c  (+44 more)
lib/tlitest/: config.py  journal-bad-timing.txt  journal-good.txt  journal-missing-entry.txt  journal.py  misc.py  test_env_config.py  test_tlog.py  test_tlog_play.py  test_tlog_play_remote.py  test_tlog_rec.py  test_tlog_rec_perf_opts.py  test_tlog_rec_session.py
lib/tlog/: Makefile.am  conf_validate.c.m4  delay.c  es_json_reader.c  fd_json_reader.c  fd_json_writer.c  journal_json_reader.c  journal_json_writer.c  json_misc.c  json_msg.c  json_reader.c  json_sink.c  json_source.c  mem_json_writer.c  misc.c  pkt.c  play.c  play_conf.c  play_conf_cmd.c.m4  rc.c  rec.c  rec_conf.c  rec_conf_cmd.c.m4  rec_session_conf.c  rec_session_conf_cmd.c.m4  rl_json_writer.c  session.c  sink.c  source.c  syslog_json_writer.c  tap.c  timespec.c  tty_sink.c  tty_source.c
lib/tltest/: Makefile.am  json_sink.c  json_source.c  json_stream_enc.c  misc.c
m4/: Makefile.am
m4/tlog/: Makefile.am  conf_cmd.m4  conf_misc.m4  conf_origin.m4  conf_schema.m4  man.m4  misc.m4  play_conf_schema.m4  rec_common_conf_schema.m4  rec_conf_schema.m4  rec_session_conf_schema.m4
man/: .gitignore  Makefile.am  tlog-play.8.m4  tlog-play.conf.5.m4  tlog-rec-session.8.m4  tlog-rec-session.conf.5.m4  tlog-rec.8.m4  tlog-rec.conf.5.m4
src/: .gitignore  Makefile.am  tlog-play.c  tlog-prog.conf.m4  tlog-rec-session.c  tlog-rec.c  tlog-test-fd-json-reader.c  tlog-test-fd-reader.c  tlog-test-grc.c  tlog-test-json-esc.c  tlog-test-json-overlay.c  tlog-test-json-passthrough.c  tlog-test-json-sink.c  tlog-test-json-source.c  tlog-test-json-stream-btoa.c  tlog-test-json-stream-enc-bin.c  tlog-test-json-stream-enc-txt.c  tlog-test-json-stream.c  tlog-test-passthrough.c  tlog-test-sink.c  tlog-test-source.c  tlog-test-stream-btoa.c  tlog-test-stream-enc-bin.c  tlog-test-stream-enc-txt.c  tlog-test-stream.c  tlog-test-timespec.c  tlog-test-timestr.c  tlog.c
src/tlitest/: README.md  tlitest-run  tlitest-setup  tlitest-teardown
src/tlog/: .gitignore  Makefile.am  tlog-play.c  tlog-prog.conf.m4  tlog-rec-session.c  tlog-rec.c
src/tltest/: .gitignore  Makefile.am  tltest-fd-json-reader.c  tltest-json-esc.c  tltest-json-overlay.c  tltest-json-passthrough.c  tltest-json-sink.c  tltest-json-source.c  tltest-json-stream-enc-bin.c  tltest-json-stream-enc-txt.c  tltest-json-stream.c  tltest-timespec.c  tltest-timestr.c
stylesheets/: stylesheet.css
