#
# Copyright (C) 2015 Red Hat
#
# This file is part of tlog.
#
# Tlog is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# Tlog is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with tlog; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

tlogdir = $(includedir)/tlog

tlog_HEADERS = \
    chunk.h         \
    es_reader.h     \
    fd_reader.h     \
    fd_writer.h     \
    grc.h           \
    mem_reader.h    \
    mem_writer.h    \
    misc.h          \
    msg.h           \
    pkt.h           \
    rc.h            \
    reader.h        \
    reader_type.h   \
    sink.h          \
    source.h        \
    stream.h        \
    syslog_writer.h \
    trx.h           \
    utf8.h          \
    writer.h        \
    writer_type.h

noinst_HEADERS = \
    test_misc.h         \
    test_sink.h         \
    test_stream_enc.h
